resources/testcases_static_checks/tests/positive/isDmfc/reorderPizzaWithMoreDatalogRules.rlsd
NextOrder(?X, !Z), Pizza(!Z) | LastForToday(?X) :- Pizza(?X) .
A(?Y) :- NextOrder(?X, ?Y) .
D(?X) :- A(?X) .
LastForToday(?X) :- B(?X) .
C(?X) :- A(?X) .
A(?X) :- C(?X) .
