resources/testcases_static_checks/tests/negative/isRmfc/minCardinality.rlsd
R_1(?X, !Z) :- A(?X) .
R_2(?X, !Z) :- A(?X) .
R_3(?X, !Z) :- A(?X) .
R(?X, ?Y) :- R_1(?X, ?Y) .
R(?X, ?Y) :- R_2(?X, ?Y) .
R(?X, ?Y) :- R_3(?X, ?Y) .
bottomObjectProperty(?X, ?Y) :- R_1(?X, ?Y), R_2(?X, ?Y) .
bottomObjectProperty(?X, ?Y) :- R_1(?X, ?Y), R_3(?X, ?Y) .
bottomObjectProperty(?X, ?Y) :- R_2(?X, ?Y), R_3(?X, ?Y) .
R_1(?X, ?Y) | R_2(?X, ?Y) | R_3(?X, ?Y) :- R(?X, ?Y) .
R(?Y, ?X) :- R(?X, ?Y) .

A(?Y) :- R(?X, ?Y) .

